# fixshell

./: .gitignore  CHANGELOG.md  Dockerfile  README.md  pyproject.toml
.github/workflows/: publish.yml  python-ci.yml
src/fixshell/: classifier.py  cli.py  config.py  context.py  history.py  llm.py  main.py  metrics.py  prompt.py  rules.py  safety.py
src/fixshell/dataset/: docker_errors.json  git_errors.json  github_errors.json  linux_errors.json
src/fixshell/engine/: classifier.py  error_classifier.py  executor.py  resolver_registry.py  retry_engine.py  rule_matcher.py  state_machine.py
src/fixshell/modes/docker/: docker_executor.py  docker_mode.py  docker_templates.py  docker_validator.py  install.py
src/fixshell/modes/git/: git_executor.py  git_mode.py  git_templates.py  git_validator.py
src/fixshell/modes/github/: github_context.py  github_executor.py  github_mode.py  github_templates.py  github_validator.py
src/fixshell/modes/linux/: linux_mode.py
src/fixshell/tools/: import_thefuck_rules.py
src/fixshell/ui/: context_panel.py  renderer.py
tests/: test_cli.py  test_safety.py  test_scenarios.py
