[tool.poetry]
name = "fixshell"
version = "2.0.0"
description = "Deterministic, State-Aware DevOps Engine"
authors = ["Thilak Divyadharshan <tdd@example.com>"]
readme = "README.md"
packages = [{include = "fixshell", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.0"
psutil = "^5.9.0" 
ollama = "^0.4.0"
rich = "^13.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"

[tool.poetry.scripts]
fixshell = "fixshell.main:main"
fx = "fixshell.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
